# virtual-tec2

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  build.ps1  build_monitor.ps1  build_monitor_headless.ps1  monitor.cpp  readme.md  run_cli.ps1  run_monitor.ps1  tec2_cli.cpp
.github/workflows/: release.yml
headless_curses/: curses.h  monitor_f10_dump_main.cpp  monitor_f10_main.cpp  monitor_f10_payload_main.cpp  monitor_f10_seed_main.cpp
mcp/: README.md  example_client.py  tec2_mcp_server.py
mcp/microcode/: jne.mcr
